Document join-cta, leader-tools, leaders-corner, login-content, map, member components.

--- a/src/components/components/leader-tools/leader-tools-list.scss
+++ b/src/components/components/leader-tools/leader-tools-list.scss
@@ -1,5 +1,8 @@
 @import './../../base-styles/init/init.scss';
 
+// Leader tools list
+//
+// Styles the leader tools list.
 .leader-tools-list {
   @include margin-top(12px);
   padding-left: 0;
