--- a/src/components/components/leader-tools/leader-tools.scss
+++ b/src/components/components/leader-tools/leader-tools.scss
@@ -1,5 +1,8 @@
 @import './../../base-styles/init/init.scss';
 
+// Leader tool
+//
+// Styles a single leader tool.
 .leader-tool {
   position: relative;
   display: flex;
