--- a/src/components/components/member/member.scss
+++ b/src/components/components/member/member.scss
@@ -1,5 +1,8 @@
 @import './../../base-styles/init/init';
 
+// Member
+//
+// Styles member page default and edit state.
 .member {
   display: block;
   margin-left: auto;
