--- a/src/components/components/join-cta/join-cta.scss
+++ b/src/components/components/join-cta/join-cta.scss
@@ -2,7 +2,7 @@
 
 // Join the network CTA
 //
-// Join the network CTA is used to invite new members to the network,
+// Join the network CTA is used to invite new members to the network.
 //
 // .image-box--tall - A tall CTA that appears at about-us page.
 
