--- a/src/components/components/member-teaser/member-teaser.scss
+++ b/src/components/components/member-teaser/member-teaser.scss
@@ -1,12 +1,20 @@
 @import './../../base-styles/init/init.scss';
 
+// Member teaser.
+//
+// Styles the member teaser..
 .member-teaser {
   position: relative;
   min-height: 90px;
+  display: flex;
+  width: 100%;
+  height: 100%;
 
   &__inner {
     display: flex;
     min-height: 70px;
+    width: 100%;
+    height: 100%;
   }
 
   &__image-wrapper {
@@ -123,7 +131,6 @@
     height: 20px;
     border-radius: 20px;
     display: block;
-
   }
 
   &--leader {
