Document contribute, member training resources, member updates, opportunities guest, opportunities member.

--- a/src/components/components/member-training-resources/member-training-resources.scss
+++ b/src/components/components/member-training-resources/member-training-resources.scss
@@ -1,5 +1,8 @@
 @import './../../base-styles/init/init.scss';
 
+// Member training resources
+//
+// Styles the member training resources.
 .member-training-resources {
   @include margin-top(0px);
 
