--- a/src/components/components/opportunities-guest/opportunities-guest.scss
+++ b/src/components/components/opportunities-guest/opportunities-guest.scss
@@ -1,5 +1,8 @@
 @import './../../base-styles/init/init';
 
+// Opportunities guest
+//
+// Styles the logged out opportunities and leader corner page.
 .opportunities-guest {
   &__header-section {
     text-align: center;
