--- a/src/components/components/opportunities-member/opportunities-member.scss
+++ b/src/components/components/opportunities-member/opportunities-member.scss
@@ -1,5 +1,8 @@
 @import './../../base-styles/init/init.scss';
 
+// Opportunities member
+//
+// Styles the logged in opportunities and leader corner page.
 .opportunities-member {
   &__title {
     text-align: left;
