Document organization-teaser, organization, organizations-list, promoted-box, shadow-bob component.

--- a/src/components/components/organization-teaser/organization-teaser.scss
+++ b/src/components/components/organization-teaser/organization-teaser.scss
@@ -1,6 +1,8 @@
 @import "../../base-styles/init/init";
 
-// Organization for front page listing.
+// Organization teaser.
+//
+// Styles organization teaser that appears at front page.
 .organization-teaser {
   display: flex;
   justify-content: center;
