--- a/src/components/components/organizations-list/organizations-list.scss
+++ b/src/components/components/organizations-list/organizations-list.scss
@@ -1,5 +1,8 @@
 @import './../../base-styles/init/init.scss';
 
+// Organization list.
+//
+// Styles organization list at front page.
 .organizations-list {
   &__title {
     position: relative;
