--- a/src/components/components/promoted-box/promoted-box.scss
+++ b/src/components/components/promoted-box/promoted-box.scss
@@ -1,5 +1,8 @@
 @import './../../base-styles/init/init.scss';
 
+// Promoted.
+//
+// Styles promoted box that appears at opportunities logged in page.
 .promoted-box {
   //padding: 22px 35px 40px;
   background-color: color('light-green');
@@ -64,7 +67,6 @@
     }
 
     @include breakpoint($mobile) {
-
       &:nth-child(2) {
         @include margin-left(45px);
       }
