--- a/src/components/components/user-popup/user-popup.scss
+++ b/src/components/components/user-popup/user-popup.scss
@@ -1,9 +1,9 @@
 @import './../../base-styles/init/init';
 
-/*
-  The popup that a logged in user sees at the header when clicks at his/her
-  image.
-*/
+//  User popup
+//
+//  The popup that a logged in user sees at the header when clicks at his/her
+//  image.
 
 .user-popup {
   margin: 0;
