--- a/src/components/forms/text-input/text-input.scss
+++ b/src/components/forms/text-input/text-input.scss
@@ -1,7 +1,11 @@
 @import './../../base-styles/init/init';
 
+// Text input.
+//
+// Styles text input.
+//
+// .text-input--member: input in member form
 .text-input {
-
   padding: 0;
   border-radius: 0;
   border: none;
@@ -20,10 +24,6 @@
 
   &--member {
     display: inline-block;
-  }
-
-  &--member-name {
-
   }
 
   &:invalid {
