--- a/src/components/pages-styles/home-page.scss
+++ b/src/components/pages-styles/home-page.scss
@@ -1,6 +1,9 @@
 @import './../base-styles/init/init.scss';
 
-// Styling specific for home page element.
+
+//  Home page
+//
+//  Styling specific for home page element.
 .home-page {
   // What's happening title.
   &__page-title {
