--- a/src/components/pages-styles/find-club.scss
+++ b/src/components/pages-styles/find-club.scss
@@ -1,10 +1,9 @@
 @import './../base-styles/init/init';
 
-/*
-  Style for the club listing page.
-  Alters the layout of filter components.
-*/
-
+//  Find club
+//
+//  Themes the club listing page.
+//  Alters the layout of filter components.
 .find-club {
   &__header {
     @include margin-bottom(50px);
