--- a/src/components/components/header/header.scss
+++ b/src/components/components/header/header.scss
@@ -100,6 +100,7 @@
     &__navigation-container {
       display: flex;
       flex-direction: column;
+      width: 100%;
 
       &.is-collapsed {
         display: none;
@@ -121,7 +122,7 @@
     }
 
     &__top {
-      padding-top: 80px;
+      padding-top: 30px;
        order: 1;
 
       .secondary-navigation__list {
@@ -153,8 +154,6 @@
     }
 
     &__bottom {
-      //@extend %shadow-box;
-
       &-inner {
         overflow: visible;
         display: flex;
