Added underline to paragraph-level links, and subsequently had to remove underline from heading-level links

--- a/src/components/components/club-teaser-list/club-teaser.scss
+++ b/src/components/components/club-teaser-list/club-teaser.scss
@@ -6,6 +6,7 @@
 .club-teaser {
   color: color('text');
   display: flex;
+  text-decoration: none;
 
   &__inner {
     @include padding-top(20px);
