--- a/src/components/components/communication-channels/communication-channels.scss
+++ b/src/components/components/communication-channels/communication-channels.scss
@@ -7,6 +7,7 @@
 .communication-channels {
   text-align: center;
   margin-bottom: 5px;
+  text-decoration: none;
 
   &__image {
     max-width: 100%;
