--- a/src/components/components/join-cta/join-cta.scss
+++ b/src/components/components/join-cta/join-cta.scss
@@ -10,6 +10,7 @@
   display: flex;
   width: 100%;
   max-width: 350px;
+  text-decoration: none;
   @include margin-top(1);
 
   @include breakpoint($desktop) {
