--- a/src/components/components/member/member.scss
+++ b/src/components/components/member/member.scss
@@ -91,6 +91,9 @@
     word-break: break-all;
     margin-left: auto;
     margin-right: auto;
+    a {
+      text-decoration: none;
+    }
   }
 
   &__link-content {
